[package]
name = "iced_baseview"
version = "0.0.3"
authors = [
  "Billy Messenger <BillyDM@protonmail.com>",
  "Robbert van der Helm <mail@robbertvanderhelm.nl>",
  "Joakim Frostegård <joakim.frostegard@gmail.com>",
]
edition = "2021"
description = "A baseview runtime for Iced"
license = "MIT"
repository = "https://github.com/BillyDM/iced_baseview"
documentation = "https://docs.rs/iced_baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
# Enables a debug view in native platforms (press F12)
debug = ["iced_runtime/debug"]
# Enable the wgu renderer
wgpu = ["iced_renderer/wgpu"]
image = ["iced_widget/image"]
svg = ["iced_widget/svg"]
canvas = ["iced_widget/canvas"]

[dependencies]
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "fdb43ea" }
cfg-if = "1"
copypasta = "0.8"
iced_runtime = {git = "https://github.com/hekar-lab/iced.git", branch = "0.10"}
iced_renderer = {git = "https://github.com/hekar-lab/iced.git", branch = "0.10"}
iced_graphics = {git = "https://github.com/hekar-lab/iced.git", branch = "0.10"}
iced_style = {git = "https://github.com/hekar-lab/iced.git", branch = "0.10"}
iced_widget = {git = "https://github.com/hekar-lab/iced.git", branch = "0.10"}
keyboard-types = { version = "0.6", default-features = false }
log = "0.4"
raw-window-handle = "0.5"
thiserror = "1.0"
